💄 fix ui alignment issue

--- a/frontend/themes/apus/views/social-view.css
+++ b/frontend/themes/apus/views/social-view.css
@@ -30,5 +30,5 @@
 
 #social-view h2 {
     font-size: 30px;
-    margin: 10px;
+    margin: 0 10px 10px 10px;
 }
